[gd_scene load_steps=6 format=3 uid="uid://cynfxqsh80q2j"]

[ext_resource type="Script" uid="uid://71lj7wv3i72j" path="res://Scenes/GameUi/GameUi.gd" id="1_5hvfd"]
[ext_resource type="LabelSettings" uid="uid://kb0w3rq0axqg" path="res://Resources/grey_32_font.tres" id="1_mb7aw"]
[ext_resource type="LabelSettings" uid="uid://5rjigeq5qhlc" path="res://Resources/blue_72_font.tres" id="2_anolp"]
[ext_resource type="LabelSettings" uid="uid://b0xnu5c2csc31" path="res://Resources/light_48_font.tres" id="3_tt7lr"]
[ext_resource type="AudioStream" uid="uid://bkkagyxtwgqqg" path="res://assets/audio/jazzyfrenchy.mp3" id="4_tt7lr"]

[node name="GameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_5hvfd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LEVEL 1"
label_settings = ExtResource("1_mb7aw")

[node name="AttemptLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attempts 0"
label_settings = ExtResource("1_mb7aw")

[node name="BestLabel" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Best Attempt 0"
label_settings = ExtResource("1_mb7aw")

[node name="VBoxGamOver" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="LabelComplete" type="Label" parent="MarginContainer/VBoxGamOver"]
layout_mode = 2
size_flags_horizontal = 4
text = "LEVEL COMPLETE"
label_settings = ExtResource("2_anolp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelPressEscape" type="Label" parent="MarginContainer/VBoxGamOver"]
layout_mode = 2
size_flags_horizontal = 4
text = "PRESS ESCAPE"
label_settings = ExtResource("3_tt7lr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_tt7lr")
parameters/looping = true
